# aegis-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  start.sh
backend/: .dockerignore  Dockerfile  aegis_os.db  aegis_runtime.db  alembic.ini  pyproject.toml  requirements.txt
backend/aegis_os_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260328_0001_initial.py  20260328_0002_case_notifications.py
backend/app/: __init__.py  main.py  seed.py
backend/app/ai/: __init__.py  gemini_client.py  orchestrator.py  output_parser.py  prompt_builder.py  types.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  cases.py  dashboard.py  health.py  nearby.py
backend/app/core/: config.py  constants.py  logging.py  middleware.py  security.py  validation.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analysis_run.py  artifact.py  case.py  recommended_action.py  user.py
backend/app/schemas/: analysis.py  case.py  enums.py
backend/app/services/: artifact_service.py  auth_service.py  case_service.py  dashboard_service.py  export_service.py  gmail_service.py  location_resolver.py  nearby_service.py
backend/app/tests/: conftest.py  test_auth.py  test_case_service.py  test_cases_api.py  test_dashboard.py  test_health.py  test_migrations.py  test_nearby.py  test_nearby_service.py  test_output_parser.py  test_security.py
docs/: architecture.md  cloud-run.md
(+60 files in other folders)
